# proj_analise_alg_t2

./: README.md  app.py  executar.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app_pages/: dashboard.py  dinamica.py  resultados_dinamica.py
csvs_teste_dinamica/: participante_01_dinamica.csv  participante_02_dinamica.csv  participante_03_dinamica.csv  participante_04_dinamica.csv  participante_05_dinamica.csv  participante_06_dinamica.csv  participante_07_dinamica.csv  participante_08_dinamica.csv  participante_09_dinamica.csv  participante_10_dinamica.csv  participante_11_dinamica.csv  participante_12_dinamica.csv  participante_13_dinamica.csv  participante_14_dinamica.csv  participante_15_dinamica.csv  participante_16_dinamica.csv  participante_17_dinamica.csv  participante_18_dinamica.csv  participante_19_dinamica.csv  participante_20_dinamica.csv  participante_21_dinamica.csv
pages/: dinamica.py  resultados-dinamica.py
results/: resultados_resumo.csv
src/caminho_minimo/: __init__.py  algorithms.py  benchmark.py  cli.py  graph.py  visualization.py
tests/: test_algorithms.py
